--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
         const body = document.body;
         const textDecoder = new TextDecoder();
-        const INT32_MAX = 2 ** 31 - 1;
+        // const INT32_MAX = 2 ** 31 - 1;
         const invisible = '\u200E'; // Zero-width space
 
         const models = document.getElementById("models");
@@ -127,7 +127,7 @@
         function upload(file) {
             const formData = new FormData();
             formData.append('c', file); // Content
-            formData.append('e', INT32_MAX.toString()); // Expiration
+            formData.append('e', '60'); // Expiration (in seconds)
             formData.append('p', 'true'); // Long URL
 
             return fetch('https://pb.angelrose.org/', {
